--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=Secure@12345
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-# Comment below after running first time
-spring.jpa.hibernate.ddl-auto=update
+# Comment below 
+spring.jpa.hibernate.ddl-auto=create
