--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.20</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.16.22</version>
+    <scope>provided</scope>
+</dependency>
 		
 
 		<dependency>
